added FeastReady project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon"  href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jagadeesan">
+    <meta name="description" content="Personal Portfolio build with React Tailwindcss">
     <title>Jagadeesan | Portfolio</title>
   </head>
-  <body>
+  <body class="overflow-y-scroll custom-scroll">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
   </body>
 </html>
