--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon"  href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jagadeesan">
-    <meta name="description" content="Personal Portfolio build with React Tailwindcss">
-    <title>Jagadeesan | Portfolio</title>
+    <meta name="description" content="Personal Portfolio with HOME, ABOUT, SKILLS, PROJECTS, CONTACT sections with seamless UI / UX and responsive for all device build with ReactJS Tailwindcss">
+    <title>Jagadeesan | Portfolio webiste</title>
   </head>
   <body class="overflow-y-scroll custom-scroll">
     <div id="root"></div>
